--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu May 26 2022 16:48:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu May 26 2022 16:50:45 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="628faf32dbaee843e4b08ae2" data-wf-site="628faf32dbaee84ba7b08ae1">
 <head>
   <meta charset="utf-8">
@@ -16,7 +16,7 @@
 </head>
 <body>
   <div class="sectin-coming-soon wf-section"><img src="images/animated-work-in-progress.svg" loading="lazy" alt="" class="img-animated">
-    <div class="text-block-6">Site en construction</div>
+    <div class="text-block-6">Site en construction 🌱</div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=628faf32dbaee84ba7b08ae1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
